Added transitions to proj-expand. Changed to height 0 / opacity 0 as workaround to display property.

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -170,13 +170,6 @@ nav a {
     }
 }
 
-.icon-expand {
-    background:url('./plus.png');
-    & .minus {
-        background:url('./minus.png');
-    }
-}
-
 .project-item {
     margin: 1em;
     margin-bottom: 3.5%;
@@ -209,11 +202,16 @@ nav a {
         display: flex;
         flex-flow: row wrap;
         justify-content: center;
+        transition: all 0.65s ease-in;
         &.inactive {
-            display: none;
+            height: 0;
+            opacity: 0;
+            // display: none;
         }
         &.active {
-            visibility: visible;
+            // visibility: visible;
+            height: 400px;
+            opacity: 1;
         }
         & p {
             width: 95%;
