--- a/css/css/main.css
+++ b/css/css/main.css
@@ -50,14 +50,14 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-flow: column nowrap;
-  flex-flow: column nowrap;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center; }
+      -ms-flex-align: center;
+          align-items: center; }
   #landing-hero a {
     margin: 1%; }
 
@@ -70,8 +70,8 @@ nav {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center; }
+      -ms-flex-align: center;
+          align-items: center; }
 
 nav a {
   color: #F7FFF7;
@@ -107,8 +107,8 @@ nav a {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-flow: column wrap;
-  flex-flow: column wrap; }
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap; }
 
 @media all and (max-width: 768px) {
   .date {
@@ -139,26 +139,26 @@ nav a {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-flow: row nowrap;
-  flex-flow: row nowrap;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: inherit;
   margin-bottom: 2%; }
   @media all and (max-width: 768px) {
     .project-wrapper {
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
-      -ms-flex-flow: column wrap;
-      flex-flow: column wrap;
+          -ms-flex-flow: column wrap;
+              flex-flow: column wrap;
       margin-bottom: 2.5%; } }
   @media all and (max-width: 575px) {
     .project-wrapper {
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
-      -ms-flex-flow: column wrap;
-      flex-flow: column wrap;
+          -ms-flex-flow: column wrap;
+              flex-flow: column wrap;
       margin-bottom: 3%; } }
 
 .project-item {
@@ -171,23 +171,18 @@ nav a {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-flow: column nowrap;
-  flex-flow: column nowrap; }
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap; }
   .project-item p {
     color: #0300FF;
     margin: 5px;
     width: 70%; }
   @media all and (max-width: 768px) {
     .project-item {
-      width: 90%; } }
+      width: 80%; } }
   @media all and (max-width: 575px) {
     .project-item {
-      width: 90%; } }
-
-.icon-expand {
-  background: url("./plus.png"); }
-  .icon-expand .minus {
-    background: url("./minus.png"); }
+      width: 80%; } }
 
 .project-text {
   display: -webkit-box;
@@ -195,8 +190,8 @@ nav a {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-flow: row wrap;
-  flex-flow: row wrap; }
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap; }
   .project-text .proj-expand {
     background: #0300FF;
     height: 400px;
@@ -207,15 +202,19 @@ nav a {
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-    -ms-flex-flow: row wrap;
-    flex-flow: row wrap;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
     -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center; }
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-transition: all 0.65s ease-in;
+    transition: all 0.65s ease-in; }
     .project-text .proj-expand.inactive {
-      display: none; }
+      height: 0;
+      opacity: 0; }
     .project-text .proj-expand.active {
-      visibility: visible; }
+      height: 400px;
+      opacity: 1; }
     .project-text .proj-expand p {
       width: 95%;
       color: #F7FFF7; }
@@ -305,8 +304,8 @@ h3 {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-flow: column nowrap;
-  flex-flow: column nowrap; }
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap; }
   .footer h3 {
     color: #F7FFF7;
     margin: 2% 7.5% 1%; }
@@ -383,5 +382,3 @@ h3 {
     @media all and (max-width: 575px) {
       .content h3 {
         margin: 4% 7.5% 1%; } }
-
-/*# sourceMappingURL=main.css.map */
