--- a/css/scss/main.css
+++ b/css/scss/main.css
@@ -130,6 +130,9 @@ nav a {
     width: 100%;
     height: 80%; }
 
+.project-image img {
+  opacity: 0.6; }
+
 .project-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -157,6 +160,11 @@ nav a {
           -ms-flex-flow: column wrap;
               flex-flow: column wrap;
       margin-bottom: 3%; } }
+
+.icon-expand {
+  background: url("./plus.png"); }
+  .icon-expand .minus {
+    background: url("./minus.png"); }
 
 .project-item {
   margin: 1em;
@@ -375,5 +383,3 @@ h3 {
     @media all and (max-width: 575px) {
       .content h3 {
         margin: 4% 7.5% 1%; } }
-
-/*# sourceMappingURL=main.css.map */
