--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -344,7 +344,8 @@ h3 {
 .content {
     background: $blue;
     width: 100%;
-    min-height: 450px;
+    min-height: 300px;
+    height: 450px;
     position: relative;
     @media all and (max-width: $med) {}
     @media all and (max-width: $sm) {}
@@ -418,5 +419,68 @@ h3 {
         @media all and (max-width: $sm) {
             margin: 4% 7.5% 1%;
         }
+    }
+}
+
+.dev-icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 80%;
+    line-height: 1.5em;
+    margin-left: 10%;
+    margin-top: 3.5%;
+    & ul {
+        list-style-type: none;
+        width: 100%;
+    }
+    & li {
+        display: inline;
+        margin: 2%;
+    }
+    @media all and (max-width: $med) {
+        margin-left: 3.5%;
+        margin-top: 10%;
+        width: 90%;
+        text-align: center;
+        i {
+            font-size: 3em;
+        }
+        & li {
+            margin: 1.5%;
+        }
+        & ul {
+            margin: none;
+        }
+    }
+    @media all and (max-width: $sm) {
+        margin-left: 3.5%;
+        margin-top: 10%;
+        width: 90%;;
+        text-align: center;
+        i {
+            font-size: 2.5em;
+        }
+        & li {
+            margin: 1.5%;
+        }
+        & ul {
+            margin: none;
+        }
+    }
+}
+
+i {
+    font-size: 4em;
+}
+
+#icons-panel {
+    height: 300px;
+}
+
+#services-panel {
+    @media all and (max-width: $sm) {
+        height: 550px;
     }
 }
