--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -196,7 +196,7 @@ nav a {
     flex-flow: row wrap;
     & .proj-expand {
         background: $blue;
-        height: 400px;
+        height: auto;
         width: 100%;
         position: relative;
         display: flex;
@@ -210,7 +210,7 @@ nav a {
         }
         &.active {
             // visibility: visible;
-            height: 400px;
+            height: 250px;
             opacity: 1;
         }
         & p {
@@ -475,6 +475,32 @@ i {
     font-size: 4em;
 }
 
+.icon {
+    fill: #fff;
+    width: 64px;
+    height: 64px;    
+    margin-top: 1.5%;
+
+    &:hover {
+        cursor: pointer;
+    }
+
+    @media all and (max-width: $sm) {
+        width: 32px;
+        height: 32px;
+    }
+
+}
+
+.footer-icons {
+    margin: 1%;
+
+    & a {
+        color: white;
+        text-decoration: none;
+    }
+}
+
 #icons-panel {
     height: 300px;
 }
@@ -482,5 +508,14 @@ i {
 #services-panel {
     @media all and (max-width: $sm) {
         height: 550px;
+    }
+}
+
+.contact-icons {
+    margin-bottom: 1.5%;
+
+    & a {
+        color: white;
+        text-decoration: none;
     }
 }
