--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -185,10 +185,14 @@ nav a {
     margin: 1em;
     margin-bottom: 3.5%;
     min-height: 300px;
-    width: 45%;
+    width: 42.5%;
     max-width: 650px;
     display: flex;
     flex-flow: column nowrap;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    padding: 10px;
+
     & p {
         color: $blue;
         margin: 5px;
@@ -196,10 +200,10 @@ nav a {
     }
 
     @media all and (max-width: $med) {
-        width: 92.5%;
+        width: 90%;
     }
     @media all and (max-width: $sm) {
-        width: 92.5%;
+        width: 90%;
     }
 }
 
@@ -414,6 +418,8 @@ h3 {
         margin: 2% 7.5% 2.5%;
         text-align: left;
         word-wrap: break-word;
+        padding: 6px;
+
         @media all and (max-width: $med) {
             width: 82.5%;
         }
